# AirTable

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  .pre-commit-config.yaml  .subtask-5-1-summary.md  ACCEPTANCE_CRITERIA_VERIFICATION.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_VERIFIED.md  PROJECT-COMPLETION-REPORT.md  README.md  SESSION-3-COMPLETION-REPORT.md  SUBTASK-1-2-SUMMARY.md  SUBTASK-3-3-COMPLETION-SUMMARY.md  SUBTASK-6-2-SUMMARY.md  SUBTASK-6-5-ACCEPTANCE-CRITERIA-VERIFICATION.md  SUBTASK-6-5-SUMMARY.md  VERIFICATION.md  ai-todo.md  alembic.ini  analyze_code.py  analyze_code_v2.py  check_alembic_location.py  check_alembic_version.py  check_db_schema.py  check_pybase_tables.py  code_review_regression.md  context.json  create_operation_logs.py  create_operation_logs_v2.py  database-config.py  docker-compose.production.yml  docker-compose.scaling.yml  docker-compose.yml  error.txt  project_index.json  pyproject.toml  (+23 more)
.claude/: metadata.json
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docker/: .dockerignore  Dockerfile  init-db.sql  nginx.scaling.conf
docker/nginx/: nginx.conf  nginx.production.conf
docs/: ALL-WORK-OUTLINE.md  Airtable_r2.md  Employee_Listing_20260126.xlsx  TROUBLESHOOTING.md  admin-recovery-verification.md  api.md  audit-summary.md  bom-extraction-guide.md  bom-workflow-verification.md  code-standards.md  codebase-summary.md  comprehensive-gap-report.md  coscad_extraction_setup.md  data-integrity-examples.md  deployment-guide.md  design-guidelines.md  extraction.md  fields.md  frontend-architecture.md  frontend-component-patterns.md  frontend-state-management.md  lsp-type-errors-critical.md  master-plan-overview.md  master-plan-phase-1-foundation.md  master-plan-phase-2-core-database.md  master-plan-phase-3-extraction.md  master-plan-phase-4-views.md  master-plan-phase-5-collaboration.md  master-plan-phase-6-automations.md  master-plan-phase-7-frontend.md  master-plan-phase-8-advanced.md  master-plan-phase-9-production.md  meilisearch-setup.md  monitoring.md  phase-4-actual-plan.md  project-overview-pdr.md  project-roadmap.md  project-status-report.md  ralph-loop-execution-report.md  scaling-guide.md  (+5 more)
docs/planning/: execution_plan.md  pybase-planning_1.md  realistic_roadmap.md
docs/reports/: actual_implementation_status.md  final_completion_report.md
docs/setup/: frontend-setup-guide.md
frontend/: ACCESSIBILITY_IMPROVEMENTS.md  Dockerfile  EXPORT_TEST_GUIDE.md  REALTIME_TEST_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: EXPORT_TESTING.md  EXPORT_TESTING_SUMMARY.md  MEMORY_LEAK_TESTING.md  MEMORY_LEAK_TESTING_SUMMARY.md  README.md  TESTING_SUMMARY.md  large-dataset-export.spec.ts  oidc-auth-flow.spec.ts  saml-auth-flow.spec.ts  scim-provisioning.spec.ts  sso-only-mode.spec.ts  virtual-scrolling-performance.spec.ts
frontend/playwright-report/: index.html
frontend/public/: sw.js
frontend/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
frontend/tests/: views.spec.ts
helm/pybase/: .helmignore  Chart.yaml  README.md  values.yaml  verify-helm-chart-simple.py
k8s/: README.md  VERIFICATION.md  deploy-aks.md  deploy-bare-metal.md  deploy-eks.md  deploy-gke.md  deploy-local.sh  deploy-production.sh  smoke-test.sh  subtask-9-1-summary.md  tear-down.sh  verify-manifests.py
k8s/base/: api-configmap.yaml  api-deployment.yaml  api-hpa.yaml  api-secrets.yaml.template  api-service.yaml  deployment.yaml  extraction-worker-deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  meilisearch-deployment.yaml  meilisearch-pvc.yaml  meilisearch-service.yaml  minio-deployment.yaml  minio-init-job.yaml  minio-pvc.yaml  minio-service.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-secret.yaml.template  rbac.yaml  (+7 more)
migrations/: README  env-clean.py  env-fixed.py  env.py  script.py.mako
monitoring/: E2E_VERIFICATION_GUIDE.md  README.md  grafana-verification-guide.md  prometheus.yml
plans/: 2026-01-24-shop-floor-mes-implementation-plan.md  phase7_report.md
scripts/: README_SUBTASK_5_1.md  README_SUBTASK_5_2.md  README_SUBTASK_5_3.md  README_SUBTASK_5_4.md  SUBTASK_5_2_SUMMARY.md  b2_full_audit.py  b2_storage_usage_examples.py  benchmark_pdf_extraction.py  e2e-verification.bat  e2e-verification.sh  fix_b2_double_slash.py  fix_cloudfile_paths.py  fix_cloudfile_paths_auto.py  fix_cloudfile_simple.py  fix_paths_fast.py  fix_type_errors.py  import_cre_versions.py  import_cre_versions_simple.py  post_serialize_index.py  query_job_by_id.py  run_export_test.sh  run_performance_test.sh  scan_cre_versions.py  seed_large_dataset.py  serialization_dashboard.py  setup_monitoring.py  test_b2_storage_service.py  test_db_connection.py  update_subtask_5_3.py  validate-dashboards.py  validate-monitoring-stack.py  verify-admin-recovery.py  verify_bom_workflow.py  verify_cloudfiles_b2.py  verify_job_persistence.py  verify_performance_test_setup.sh  verify_retry_logic.py  verify_retry_manual.py  verify_worker_pickup.py  verify_worker_restart_persistence.py  (+1 more)
tests/: .env.test  __init__.py  conftest.py  manual_e2e_verification.md  test_auth.py  test_bases.py  test_comments.py  test_extraction_e2e.py  test_fields.py  test_health.py  test_records.py  test_tables.py  test_workspaces.py
unified-doc-intelligence-deploy/: README.md  UBUNTU_SETUP.md  config-template.txt  config.txt  deploy.sh  requirements.txt  run-pipeline.py  schema-migration.sql  setup.py  test-deployment.py  test-ubuntu.sh
workers/: celery_export_worker.py  celery_extraction_worker.py  celery_maintenance_worker.py  celery_search_worker.py  cleanup_worker.py  report_generator.py  report_scheduler.py  report_worker.py  test_retry_task.py  worker_db.py  worker_metrics.py
(+803 files in other folders)
