[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybase"
version = "0.1.0"
description = "Self-hosted Airtable alternative with CAD/PDF extraction capabilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "PyBase Team" }
]
keywords = [
    "airtable",
    "database",
    "spreadsheet",
    "cad",
    "pdf",
    "extraction",
    "fastapi",
    "postgresql"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Office/Business :: Office Suites",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.5.3",
    "email-validator>=2.1.0",
    "pydantic-settings>=2.1.0",
    
    # Caching & Background Tasks
    "redis>=5.0.1",
    "celery>=5.3.6",
    
    # Object Storage
    "boto3>=1.34.0",
    
    # Utilities
    "httpx>=0.26.0",
    "orjson>=3.9.10",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "nanoid>=2.0.0",
]

[project.optional-dependencies]
# CAD/PDF Extraction Dependencies
extraction = [
    # PDF Processing
    "pdfplumber>=0.10.3",
    "tabula-py>=2.9.0",
    "PyMuPDF>=1.23.8",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    
    # CAD Processing
    "ezdxf>=1.1.4",
    "ifcopenshell>=0.7.0",
    
    # Image Processing
    "Pillow>=10.2.0",
    "opencv-python>=4.9.0.80",
]

# Development Dependencies
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.3",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    
    # Code Quality
    "black>=24.1.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    
    # Type Stubs
    "types-redis>=4.6.0.11",
    "types-passlib>=1.7.7.13",
    "types-python-dateutil>=2.8.19.14",
    "types-pytz>=2024.1.0.20240203",
    
    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]

# Search & AI Features
search = [
    "meilisearch>=0.28.3",
]

# WebSocket Support
realtime = [
    "websockets>=12.0",
    "python-socketio>=5.10.0",
]

# All optional dependencies
all = [
    "pybase[extraction,dev,search,realtime]",
]

[project.urls]
Homepage = "https://github.com/pybase/pybase"
Documentation = "https://pybase.dev/docs"
Repository = "https://github.com/pybase/pybase"
Issues = "https://github.com/pybase/pybase/issues"

[project.scripts]
pybase = "pybase.cli:main"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/pybase"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# Black - Code Formatter
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hatch
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# Ruff - Fast Linter
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".hatch",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004"]
"migrations/**/*.py" = ["ERA"]

[tool.ruff.lint.isort]
known-first-party = ["pybase"]
force-single-line = false
lines-after-imports = 2

# MyPy - Type Checker
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "asyncpg.*",
    "pdfplumber.*",
    "tabula.*",
    "fitz.*",
    "ezdxf.*",
    "ifcopenshell.*",
    "cv2.*",
    "PIL.*",
]
ignore_missing_imports = true

# Pytest - Testing
[tool.pytest]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pytest.env]
ENVIRONMENT = "test"
DATABASE_URL = "postgresql+asyncpg://pybase:pybase@localhost:5432/pybase_test"
REDIS_URL = "redis://localhost:6379/1"
SECRET_KEY = "test-secret-key-do-not-use-in-production"

# Coverage
[tool.coverage.run]
source = ["src/pybase"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true
